# gconf-cleaner

./: ChangeLog  ProjectHome.md  README  Release_0_0_3.md  configure.ac
po/: ChangeLog  fr.po  it.po  ja.po  pl.po
src/: gconf-cleaner.c  gconf-cleaner.h  main.c
tags/gconf-cleaner-0.0.1/: Makefile.am  configure.ac
tags/gconf-cleaner-0.0.1/src/: gconf-cleaner.c
tags/gconf-cleaner-0.0.2/: ChangeLog  README  autogen.sh
tags/gconf-cleaner-0.0.2/po/: ja.po
tags/gconf-cleaner-0.0.2/src/: gconf-cleaner.h
tags/gconf-cleaner-0.0.3/: README
tags/gconf-cleaner-0.0.3/po/: ChangeLog  POTFILES.in  ja.po  sv.po
tags/gconf-cleaner-0.0.3/src/: Makefile.am  gconf-cleaner.c  gconf-cleaner.h
trunk/: AUTHORS  ChangeLog  README  configure.ac  requires
trunk/po/: ChangeLog  POTFILES.in  de.po  es.po
trunk/src/: Makefile.am  gconf-cleaner.c  gconf-cleaner.desktop.in.in  gconf-cleaner.h  main.c
wiki/: GConfCleaner0_0_3.wiki  Release_0_0_3.wiki
