NULL =

INCLUDES =					\
	-DG_LOG_DOMAIN="\"GConf-Cleaner\""	\
	$(GCLEANER_CFLAGS)			\
	$(NULL)
LIBS =						\
	@LDFLAGS@				\
	$(GCLEANER_LIBS)			\
	$(NULL)

bin_PROGRAMS =					\
	gconf-cleaner				\
	$(NULL)

gconf_cleaner_SOURCES =				\
	gconf-cleaner.c				\
	gconf-cleaner.h				\
	main.c					\
	$(NULL)
